Minor improvements to backend
